Fixed accordion h3 and + button alignment and spacing in _accordion.scss

--- a/scss/_accordion.scss
+++ b/scss/_accordion.scss
@@ -10,6 +10,15 @@
     border: none;
     outline: none;
     transition: 0.4s;
+    
+    /* To align and space out h3 and + button */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    h3 {
+        margin: 0 0 0.5rem;
+    }
 }
   
 /* Adds a background color to the button if it is clicked on and when hovering over it */
